# prop_reader

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  parser.rs
tests/: invalid_proper.properties  main_test.rs  small_valid.properties
tests/files/: properties.xml  valid.properties
